--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base{
+    html {
+        font-size: 62.5%;
+    }
+
     @font-face {
         font-family: 'Thiccboi';
         src: url('./fonts/THICCCBOI-Thin.woff2') format('woff2');
@@ -68,7 +72,16 @@
     }
 }
 
+.wrapper {
+    display: grid;
+    grid-template-columns: minmax(100% , 1fr);
+    grid-auto-rows: auto;
+    width: 96vw;
+    margin: 0 auto;
+}
 
-.font {
-    background-color: blue;
+.custom-grid {
+    display: grid;
+    grid-auto-columns: 1fr;
+    gap: .7vmax;
 }
